--- a/eat.Rmd
+++ b/eat.Rmd
@@ -21,6 +21,10 @@ GSS1998 <- read_dta("GSS1998.dta")
 ## There were two years in which the General Social Survey asked about the frequency of eating out.
 ### Find those years and for the first year the question was asked download that years data in a stata format - its name will be "GSSxxxx.dta" where the xxxx is replaced by the year.  For example if the year was 1983 its name would be GSS1983.dta. Your assignment is to download the GSS yearly dataset for the first year the question was asked and then  write up the answer to the question by editing the  code block in line 31 to eval=TRUE and finish the job. 
 
+#method
+
+Using NORC we downloaded STATA, SRSS, and SAS to complete eating out using tigerstat. I will run some graphs and test so that my answers to the prompt are visualized. I needed Cat~Cat helper file to complete this project. 
+
 $H_0$ There is no difference among the various races with frequency of eating out  
 $H_A$ There is a statistical difference between at least two races with the frequency of eating out  
 
